White text on bulk assign button to correct contrast

--- a/app/assets/stylesheets/admin/page-applications.scss
+++ b/app/assets/stylesheets/admin/page-applications.scss
@@ -595,6 +595,7 @@
   left: -9999px;
   margin-top: 10px;
   background-color: $blue-link-colour;
+  color: white;
 
   &.show-button {
     left: 0;
